--- a/introducao-html-css/index.html
+++ b/introducao-html-css/index.html
@@ -6,6 +6,19 @@
         <title>Jefferson Nascimento</title>
     </head>
     <body>
-        Meu primeiro site HTML!
+        <header>
+        <h1>Jefferson Nascimento</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer>Contato</footer>
     </body>
 </html>
