aula sobre links

--- a/introducao-html-css/index.html
+++ b/introducao-html-css/index.html
@@ -17,6 +17,12 @@
                 <header>
                     <h3>Post #1</h3>
                 </header>
+                <p>Lorem ipsum dolor sit amet, <a href="https://www.lipsum.com" target="_blank">consectetur</a> adipiscing elit. 
+                    Nunc vehicula cursus libero pharetra vulputate. Sed mollis dolor orci, nec tempor lorem mattis in. 
+                    Vestibulum nisl quam, semper pretium ligula in, volutpat feugiat mauris. 
+                    Ut suscipit turpis a risus ultrices, ac dictum leo venenatis. 
+                    Ut venenatis convallis massa a vulputate. In a ante sit amet ante eleifend vestibulum. 
+                    <a href="mailto:mail@mail.com">Suspendisse potenti.</a></p>
             </article>
         </section>
         <footer>Contato</footer>
