--- a/introducao-html-css/index.html
+++ b/introducao-html-css/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+        <img src="100x100.png" alt="Foto perfil">    
         <h1>Jefferson Nascimento</h1>
         </header>
         <section>
@@ -16,6 +17,7 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img src="960x320.jpg" alt="Banner post">
                 </header>
                 <p>Lorem ipsum dolor sit amet, <a href="https://www.lipsum.com" target="_blank">consectetur</a> adipiscing elit. 
                     Nunc vehicula cursus libero pharetra vulputate. Sed mollis dolor orci, nec tempor lorem mattis in. 
