Adicionando lista não ordenada ao rodapé

--- a/introducao-html-css/index.html
+++ b/introducao-html-css/index.html
@@ -27,6 +27,18 @@
                     <a href="mailto:mail@mail.com">Suspendisse potenti.</a></p>
             </article>
         </section>
-        <footer>Contato</footer>
+        <footer>
+            <ul>
+                <li>
+                    <a href="mailto:mail@mail.com">mail@mail.com</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
+                </li>
+                <li>
+                    <a href="https://www.github.com/" target="_blank">GitHub</a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
